# adenium_software

./: CMakeLists.txt
cmake/: Config.cmake.in
source/: CMakeLists.txt
source/common/: CMakeLists.txt
source/eudaq/: CMakeLists.txt
source/eudaq/misc/: adenium_eudaqRun.sh
source/eudaq/src/: AdeniumProducer.cc
source/layerdaq/: CMakeLists.txt
source/layerdaq/exe/: CMakeLists.txt  testdump.cc
source/layerdaq/files/: README.md
source/layerdaq/files/boot/efi/: image.ub  loadfirmware.sh  system.dtb  uEnv.txt
source/layerdaq/files/etc/systemd/system/: adenium-firmware.service  adenium-tcpserver.service
source/layerdaq/files/usr/lib/firmware/: altel_plane_2p10.dtbo
source/layerdaq/lib/: CMakeLists.txt
source/layerdaq/lib/misc/: CMakeLists.txt  altel_reg_cmd_list.json
source/layerdaq/lib/src/: TcpServer.cc
source/layerdaq/module/: CMakeLists.txt  README.md  axidmachar.c
source/teldaq/lib/: CMakeLists.txt
source/teldaq/lib/include/: Layer.hh  Telescope.hh
source/teldaq/lib/misc/: CMakeLists.txt  altel_layer_conf.json
source/teldaq/lib/src/: Layer.cc  Telescope.cc
